--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.9.0",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
@@ -27,7 +28,6 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
-    "rn-fetch-blob": "^0.12.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
